--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This program recommends you a movie in a conversational manner.
+
+To use this program, simply download the latest version of the python notebook. All the installs and imports are in that particular notebook
