--- a/gui.ipynb
+++ b/gui.ipynb
@@ -10,12 +10,9 @@
     "import numpy as nphello\n",
     "from tensorflow import keras\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from tkinter import *\n",
+    "from tkinter import font\n",
     "from tkinter import ttk\n",
-    "\n",
-    "import colorama \n",
-    "colorama.init()\n",
-    "from colorama import Fore, Style, Back\n",
+    "from tkinter import *\n",
     "\n",
     "import random\n",
     "import pickle\n",
@@ -47,36 +44,44 @@
     "\n",
     "        result = model.predict(keras.preprocessing.sequence.pad_sequences(tokenizer.texts_to_sequences([inp]),truncating='post', maxlen=max_len))\n",
     "        tag = lbl_encoder.inverse_transform([np.argmax(result)])\n",
-    "\n",
-    "\n",
     "        textBox.delete(0, 'end')\n",
     "        chat.configure(state='normal')\n",
-    "        chat.insert('end', 'User: ' + text + '\\n')\n",
+    "        chat.tag_config(\"darker\", background=\"#d0dce6\", foreground='#082e39')\n",
+    "        chat.tag_config(\"lighter\", foreground='#082e39')\n",
+    "        chat.tag_config(\"username\", font='Calibri 14 bold',  background=\"#d0dce6\", foreground='#082e39')\n",
+    "        chat.tag_config(\"botname\", font='Calibri 14 bold', foreground='#082e39')\n",
+    "\n",
+    "        chat.insert('end', 'User: ', 'username')\n",
+    "        chat.insert('end', text + '\\n', 'darker')\n",
     "        for i in data['intents']:\n",
     "            if i['tag'] == tag:\n",
-    "                chat.insert('end', 'Moviebot: ' + np.random.choice(i['responses']) + '\\n')\n",
+    "                chat.insert('end', 'Moviebot: ', 'botname')\n",
+    "                chat.insert('end', np.random.choice(i['responses']) + '\\n', 'lighter')\n",
     "        if tag == \"genres\":\n",
-    "            chat.insert('end', 'Moviebot: ' + \"Got one for you! How about.. '\" + webscraper(inp) + \"'?\" + '\\n')\n",
+    "            chat.insert('end', 'Moviebot: ', 'botname')\n",
+    "            chat.insert('end', \"Got one for you! How about.. '\" + webscraper(inp) + \"'?\" + '\\n', 'lighter')\n",
     "            genre = inp\n",
     "        if tag == \"another\":\n",
-    "            chat.insert('end', 'Moviebot: ' + webscraper(genre) + '\\n')\n",
+    "            chat.insert('end', 'Moviebot: ', 'botname')\n",
+    "            chat.insert('end', webscraper(genre) + '\\n', 'lighter')\n",
     "        chat.configure(state='disabled')\n",
     "\n",
     "\n",
     "    root = Tk()\n",
     "    chatBox = Scrollbar(root)\n",
-    "    chat = Text(root, wrap='word', state='disabled', width=50,\n",
-    "                yscrollcommand=chatBox.set)\n",
+    "    chat = Text(root, wrap='word', state='disabled', width=30, height=15,\n",
+    "                yscrollcommand=chatBox.set, background='#e7eff6', font='Calibri 14')\n",
     "    chatBox.configure(command=chat.yview)\n",
+    "\n",
     "\n",
     "    chat.grid(row=0, columnspan=2, sticky='ewns')\n",
     "    chatBox.grid(row=0, column=2, sticky='ns')\n",
-    "    Label(root, text=\"Input: \").grid(row=1, column=0)\n",
+    "    Label(root, text=\"Message: \", font='Calibri 14 bold', foreground='#082e39').grid(row=1, column=0)\n",
     "\n",
-    "    textBox = Entry(root, bd=0, width=40, bg=\"lightblue\")\n",
+    "    textBox = Entry(root, bd=0, width=30, bg=\"#8ab9c5\", font='Calibri 14', foreground='#082e39')\n",
     "    textBox.grid(row=1, column=1)\n",
     "\n",
-    "    Button(root, text=\"Send\", command=chatLog).grid(row=2, columnspan=2)\n",
+    "    Button(root, text=\"Send\", command=chatLog, background='#8ab9c5', font='Calibri 13', foreground='#082e39').grid(row=3, columnspan=3)\n",
     "    root.mainloop()\n",
     "\n",
     "chatbox()\n"
