--- a/chatbot_testing1_2.ipynb
+++ b/chatbot_testing1_2.ipynb
@@ -44,7 +44,7 @@
         "!pip install bs4\n",
         "!pip install googletrans==4.0.0rc1"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "import requests\n",
         "import pandas as pd\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "        \n",
         "num_classes = len(labels)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
         "lbl_encoder.fit(training_labels)\n",
         "training_labels = lbl_encoder.transform(training_labels)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "sequences = tokenizer.texts_to_sequences(training_sentences)\n",
         "padded_sequences = pad_sequences(sequences, truncating='post', maxlen=max_len)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
         "epochs = 500\n",
         "history = model.fit(padded_sequences, np.array(training_labels), epochs=epochs)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1293,7 @@
         "with open('label_encoder.pickle', 'wb') as ecn_file:\n",
         "    pickle.dump(lbl_encoder, ecn_file, protocol=pickle.HIGHEST_PROTOCOL)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,11 +1308,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "f2ooK73_t41I",
-        "outputId": "0f21ece7-c9cd-4347-bbaa-4e7cb31fde74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "0f21ece7-c9cd-4347-bbaa-4e7cb31fde74"
       },
       "source": [
         "def GetTitlesFromSoup(results):                                    #Optional, may be implemented to improve readability\n",
@@ -1375,7 +1375,7 @@
         "webscraper(\"action\")\n",
         " "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,49 +1434,63 @@
         "    # parameters\n",
         "    max_len = 20\n",
         "\n",
-        "    language_detect = input(\"Please state the language you would like to talk in to Moviebot? \\n (State the language in English please) \")\n",
-        "    language_detect = language_detect.lower()\n",
-        "    language_lib = googletrans.LANGCODES\n",
+        "    age_authorizer = False\n",
+        "\n",
+        "    print(\"Are you 18 years or older?\")\n",
+        "    age_check = input()\n",
+        "    if age_check == \"yes\":\n",
+        "      age_authorizer = True\n",
+        "    else:\n",
+        "      print(\"I'm sorry, but you have to be over 18 to use this software, since some movies are for 18+ only\")\n",
+        "\n",
+        "    if age_authorizer == True:\n",
+        "\n",
+        "      language_detect = input(\"Please state the language you would like to talk in to Moviebot? \\n (State the language in English please) \")\n",
+        "      language_detect = language_detect.lower()\n",
+        "      language_lib = googletrans.LANGCODES\n",
         "\n",
         "    \n",
         "    \n",
-        "    while True:\n",
-        "        print(Fore.LIGHTBLUE_EX + \"User: \" + Style.RESET_ALL, end=\"\")\n",
-        "        inp = input()\n",
-        "        #language = (translator.detect(inp)).lang\n",
-        "        language = language_lib[language_detect]\n",
-        "        inp_translated = (translator.translate(inp)).text\n",
-        "        if inp_translated.lower() == \"quit\":\n",
-        "            break\n",
+        "\n",
+        "    \n",
+        "    \n",
+        "      while True:\n",
+        "          print(Fore.LIGHTBLUE_EX + \"User: \" + Style.RESET_ALL, end=\"\")\n",
+        "          inp = input()\n",
+        "          #language = (translator.detect(inp)).lang\n",
+        "          language = language_lib[language_detect]\n",
+        "          inp_translated = (translator.translate(inp)).text\n",
+        "          if inp_translated.lower() == \"quit\":\n",
+        "              break\n",
         "        \n",
         "\n",
         "\n",
-        "        result = model.predict(keras.preprocessing.sequence.pad_sequences(tokenizer.texts_to_sequences([inp_translated]),\n",
-        "                                             truncating='post', maxlen=max_len))\n",
-        "        tag = lbl_encoder.inverse_transform([np.argmax(result)])\n",
+        "          result = model.predict(keras.preprocessing.sequence.pad_sequences(tokenizer.texts_to_sequences([inp_translated]),\n",
+        "                                              truncating='post', maxlen=max_len))\n",
+        "          tag = lbl_encoder.inverse_transform([np.argmax(result)])\n",
         "\n",
-        "        for i in data['intents']:\n",
-        "          if i['tag'] == tag:\n",
-        "            answer = np.random.choice(i['responses'])\n",
-        "            trans_answer = translator.translate(answer, dest = language).text\n",
-        "            print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
+        "          for i in data['intents']:\n",
+        "            if i['tag'] == tag:\n",
+        "              answer = np.random.choice(i['responses'])\n",
+        "              trans_answer = translator.translate(answer, dest = language).text\n",
+        "              print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
         "\n",
-        "        if tag == \"thanks\":\n",
+        "          if tag == \"thanks\":\n",
+        "              answer = np.random.choice(i['responses'])\n",
+        "              trans_answer = translator.translate(answer, dest = language).text\n",
+        "              #print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
+        "              break\n",
+        "          if tag == \"genres\":\n",
         "            answer = np.random.choice(i['responses'])\n",
         "            trans_answer = translator.translate(answer, dest = language).text\n",
         "            #print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
-        "            break\n",
-        "        if tag == \"genres\":\n",
-        "          answer = np.random.choice(i['responses'])\n",
-        "          trans_answer = translator.translate(answer, dest = language).text\n",
-        "          #print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
-        "          print(translator.translate(\"What about: \", dest = language).text, webscraper(inp_translated))\n",
-        "          genre = inp_translated\n",
-        "        if tag == \"another\":\n",
-        "          answer = np.random.choice(i['responses'])\n",
-        "          trans_answer = translator.translate(answer, dest = language).text\n",
-        "          #print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
-        "          print(webscraper(genre))\n",
+        "            print(translator.translate(\"What about: \", dest = language).text, webscraper(inp_translated))\n",
+        "            genre = inp_translated\n",
+        "          if tag == \"another\":\n",
+        "            answer = np.random.choice(i['responses'])\n",
+        "            trans_answer = translator.translate(answer, dest = language).text\n",
+        "            #print(Fore.GREEN + \"ChatBot:\" + Style.RESET_ALL , trans_answer)\n",
+        "            print(webscraper(genre))\n",
         "        \n",
         "          \n",
         "          \n",
@@ -1488,7 +1502,7 @@
         "print(Fore.YELLOW + \"Start messaging with the bot (type quit to stop)!\" + Style.RESET_ALL)\n",
         "chat()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1531,7 +1545,7 @@
         "# jumps over  ->  이상 점프\n",
         "# the lazy dog  ->  게으른 개"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1729,7 +1743,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1748,10 +1762,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HkDNVy-xPOGq",
-        "outputId": "182b5417-0d2b-4884-d0cd-8993c8232a58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "182b5417-0d2b-4884-d0cd-8993c8232a58"
       },
       "source": [
         "\n",
@@ -1768,7 +1782,7 @@
         "#Component tests\n",
         "print(WebscraperTest())\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
