--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This program recommends you a movie in a conversational manner.
 
-To use this program, simply download the latest version of the python notebook. All the installs and imports are in that particular notebook
+To use this program, simply download the latest version of the python notebook. All the installs and imports are in that particular notebook.
+
+When you reply to the age checker with yes, we are in no way responsible for any R-rated movies you get suggested. 
