--- a/README
+++ b/README
@@ -1,11 +1,17 @@
 This program recommends you a movie in a conversational manner.
 
-To use this program, simply download the latest version of the python notebook. All the installs and imports are in that particular notebook.
-
 When you reply to the age checker with yes, we are in no way responsible for any R-rated movies you get suggested. 
 
-To run the .py files:
+To use this program locally, download the "Moviebot" folder, install the requirements in requirementes.txt and run Orchestrator_GUI.py.
+
+To use this program on a private cloud: 
+Download the "deployment" folder and install the requirements in requirementes.txt. 
+
+To replicate the server setup, AI.py and intents.json need to be on the server, and the rest of the files go on the client PC. The server computer needs
+to be setup as an OpenSSH server and the client needs to be set up an OpenSSH client. PCSP, which comes with PuTTY is also needed.
+
+When everything is ready, run Orchestrator_GUI on the client computer.
+
 The orchestrator and interface components are implemented as separate modules in their respective .py files, 
-but they both run on the client machine in our private cloud system. The code for running our application on the 
-private cloud system is found under “deployment” in our GitHub repository. 
-To replicate the setup, AI.py and intents.json need to be on the server, and the rest of the files go on the client PC.
+but they both run on the client machine in our private cloud system.
+
